PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2015, PHP 5.5.26

- Core:
  . Fixed bug #69566 (Conditional jump or move depends on uninitialised value
    in extension trait). (jbboehr at gmail dot com)

- Iconv:
  . Fixed bug #48147 (iconv with //IGNORE cuts the string). (Stas)

- Opcache
  . Fixed bug #69549 (Memory leak with opcache.optimization_level=0xFFFFFFFF).
    (Laruence, Dmitry)

14 May 2015, PHP 5.5.25

- Core:
  . Fixed bug #69467 (Wrong checked for the interface by using Trait). 
    (Laruence)
  . Fixed bug #69420 (Invalid read in zend_std_get_method). (Laruence)
  . Fixed bug #60022 ("use statement [...] has no effect" depends on leading
    backslash). (Nikita)
  . Fixed bug #67314 (Segmentation fault in gc_remove_zval_from_buffer).
    (Dmitry)
  . Fixed bug #68652 (segmentation fault in destructor). (Dmitry)
  . Fixed bug #69419 (Returning compatible sub generator produces a warning).
    (Nikita)
  . Fixed bug #69472 (php_sys_readlink ignores misc errors from 
    GetFinalPathNameByHandleA). (Jan Starke)

- ODBC:
  . Fixed bug #69474 (ODBC: Query with same field name from two tables returns
    incorrect result). (Anatol)
  . Fixed bug #69381 (out of memory with sage odbc driver). (Frederic Marchall,
    Anatol Belski)

- OpenSSL:
  . Fixed bug #69402 (Reading empty SSL stream hangs until timeout).
    (Daniel Lowrey)

16 Apr 2015, PHP 5.5.24

- Apache2handler:
  . Fixed bug #69218 (potential remote code execution with apache 2.4
    apache2handler). (Gerrit Venema)

- Core:
  . Fixed bug #66609 (php crashes with __get() and ++ operator in some cases).
    (Dmitry, Laruence)
  . Fixed bug #67626 (User exceptions not properly handled in streams). 
    (Julian)
  . Fixed bug #68021 (get_browser() browser_name_regex returns non-utf-8
    characters). (Tjerk)
  . Fixed bug #68917 (parse_url fails on some partial urls). (Wei Dai)